<resources>
    <string name="app_name">whackamole</string>
    <string name="str_button_cancel">CANCEL</string>
    <string name="str_log_in">Log in</string>
    <string name="str_sign_up">Sign up</string>
    <string name="str_button_accept">ACCEPT</string>
    <string name="str_button_start">START GAME</string>
    <string name="str_button_options">OPTIONS</string>
    <string name="str_button_multiplayer">MULTIPLAYER NEW</string>
    <string name="str_button_multiplayer_inv">MULTIPLAYER INVITATIONS</string>
    <string name="str_button_scores">CHAMPIONS</string>
    <string name="str_text_title">Whack A Mole!</string>
    <string name="str_button_register">I already have an account</string>
    <string name="str_button_login">Get Started</string>
    <string name="str_title_time">Time:</string>
    <string name="str_show_time">showT</string>
    <string name="str_title_score">Score:</string>
    <string name="str_show_score">showS</string>
    <string name="str_title_live">Lives:</string>
    <string name="str_show_live">showL</string>


    <!-- LEVEL GAME -->
    <string name="str_game_level">GAME LEVEL</string>
    <string name="level1">Easy</string>
    <string name="level2">Medium</string>
    <string name="level3">Hard</string>

    <!-- MESSAGES   -->
    <string name="str_end_time">You ran out of time!</string>
    <string name="str_end_lives">You ran out of lives!</string>

    <string name="str_end_game">Game is over!</string>

    <!-- MESSAGES   -->
    <string name="str_gamer_name">Gamer Name</string>
    <string name="str_gamer_score">Game score</string>

</resources>