<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/grass"
        tools:context=".game.MenuGameActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:gravity="center"
        android:weightSum="3">

        <!--Main Title-->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@string/str_text_title"
            android:id="@+id/text_title"
            android:textSize="22pt"
            android:layout_weight="0.4"
            android:layout_marginTop="10dp"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/img_start_mole"
            android:src="@drawable/whackamole_start"
            android:layout_weight="1.4"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="15dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="1.2">

            <Button
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/str_button_start"
                android:id="@+id/button_start"
                android:onClick="onClick"
                android:layout_weight="1"
                android:layout_marginTop="5dp"/>

            <Button
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/str_button_multiplayer"
                android:onClick="onClick"
                android:id="@+id/button_multiplayer"
                android:layout_weight="1"/>

            <Button
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/str_button_multiplayer_inv"
                android:onClick="onClick"
                android:id="@+id/button_multiplayer_inv"
                android:layout_weight="1"/>

            <Button
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/str_button_scores"
                android:onClick="onClick"
                android:id="@+id/button_scores"
                android:layout_weight="1"/>

            <Button
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/str_button_options"
                android:onClick="onClick"
                android:id="@+id/button_options"
                android:layout_weight="1"
                android:layout_marginBottom="5dp"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>


