<!--Start Screen StartActivity Layout-->
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/grass"
    tools:context=".game.OptionsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:gravity="center"
        android:weightSum="3">

        <!--Main Title-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@string/str_game_level"
            android:id="@+id/text_title"
            android:textSize="22pt"
            android:layout_weight="0.4"
            android:layout_marginTop="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="1">

            <!--Buttons the Play Game, Options, High Scores-->

            <Button
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/level1"
                android:id="@+id/button_level1"
                android:onClick="onClick"
                android:layout_weight="1"
                android:layout_marginTop="5dp"/>

            <Button
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/level2"
                android:onClick="onClick"
                android:id="@+id/button_level2"
                android:layout_weight="1"/>

            <Button
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/level3"
                android:onClick="onClick"
                android:id="@+id/button_level3"
                android:layout_weight="1"
                android:layout_marginBottom="5dp"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>


