<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@color/white"
tools:context=".game.StartGameActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/topBar"
        android:background="@color/sky"
        >

        <!--   TIME-->
        <TextView
            android:id="@+id/textTitleTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_title_time"
            android:textSize="12pt"
            android:layout_alignParentTop="true"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"/>

        <!--  SCORE-->
        <TextView
            android:id="@+id/textShowTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="9dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="15dp"
            android:layout_toRightOf="@+id/textTitleTime"
            android:text="@string/str_show_time"
            android:textSize="12pt" />

        <TextView
            android:id="@+id/textTitleScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="@+id/textShowTime"
            android:layout_marginLeft="1.2in"
            android:layout_marginTop="5dp"
            android:text="@string/str_title_score"
            android:textSize="12pt" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textShowScore"
            android:textSize="10pt"
            android:text="@string/str_show_score"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="@+id/textTitleScore"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginEnd="10dp"/>


    </RelativeLayout>



    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/gameCanvas"
    android:orientation="vertical"
    android:weightSum="2.5"
        android:layout_below="@+id/topBar"
    >

    <!--Row 1-->

    <RelativeLayout
        android:id="@+id/row0"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8"
        android:background="@drawable/sky1"
        android:orientation="horizontal">


<!--            <ImageView-->
<!--                android:id="@+id/imageView2"-->
<!--                android:layout_width="261dp"-->
<!--                android:layout_height="110dp"-->
<!--                android:layout_marginTop="13dp"-->
<!--                android:layout_marginRight="33dp"-->
<!--                app:srcCompat="@drawable/table_vertical" />-->
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:id="@+id/row1"
        android:orientation="horizontal"
        android:background="@drawable/sky2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:weightSum="3"
            >

            <ImageView
                android:layout_width="105dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:onClick="onClick"
                android:adjustViewBounds="true"
                android:id="@+id/imageMole1"
                android:src="@drawable/gopher"
                android:layout_gravity="bottom"/>
            <ImageView
                android:layout_width="105dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:onClick="onClick"
                android:adjustViewBounds="true"
                android:id="@+id/imageMole2"
                android:src="@drawable/gopher"
                android:layout_gravity="bottom"/>
            <ImageView
                android:layout_width="105dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:onClick="onClick"
                android:adjustViewBounds="true"
                android:id="@+id/imageMole3"
                android:src="@drawable/gopher"
                android:layout_gravity="bottom"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="2"
            android:orientation="vertical"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                >

<!--                <ImageView-->
<!--                    android:id="@+id/imageView"-->
<!--                    android:layout_width="352dp"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_marginTop="-25dp"-->
<!--                    android:layout_marginEnd="-35dp"-->
<!--                    android:layout_marginRight="-13dp"-->
<!--                    android:layout_weight="1"-->
<!--                    app:srcCompat="@drawable/table_horizontal" />-->


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/plain_grass_3"
                android:layout_weight="1"
                />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:weightSum="3"
            >

            <ImageView
                android:layout_width="105dp"
                android:layout_height="49dp"
                android:layout_weight="1"
                android:id="@+id/holeImage1"
                android:src="@drawable/hole"
                android:layout_gravity="center_vertical"/>

            <ImageView
                android:id="@+id/holeImage2"
                android:layout_width="105dp"
                android:layout_height="54dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:src="@drawable/hole" />

            <ImageView
                android:layout_width="105dp"
                android:layout_height="49dp"
                android:layout_weight="1"
                android:id="@+id/holeImage3"
                android:src="@drawable/hole"
                android:layout_gravity="center_vertical"/>
        </LinearLayout>

    </RelativeLayout>

    <!--Row 2-->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:id="@+id/row2"
        android:background="@drawable/plain_grass_3"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:weightSum="3"
            >

            <ImageView
                android:layout_width="105dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:onClick="onClick"
                android:adjustViewBounds="true"
                android:id="@+id/imageMole4"
                android:src="@drawable/gopher"
                android:layout_gravity="bottom"/>
            <ImageView
                android:layout_width="105dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:onClick="onClick"
                android:adjustViewBounds="true"
                android:id="@+id/imageMole5"
                android:src="@drawable/gopher"
                android:layout_gravity="bottom"/>
            <ImageView
                android:layout_width="105dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:onClick="onClick"
                android:adjustViewBounds="true"
                android:id="@+id/imageMole6"
                android:src="@drawable/gopher"
                android:layout_gravity="bottom"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="2"
            android:orientation="vertical"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                >
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                >
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:weightSum="3"
            android:background="@drawable/plain_grass_3"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="105dp"
                android:layout_height="49dp"
                android:layout_weight="1"
                android:id="@+id/holeImage4"
                android:src="@drawable/hole"/>

            <ImageView
                android:layout_width="105dp"
                android:layout_height="49dp"
                android:layout_weight="1"
                android:id="@+id/holeImage5"
                android:src="@drawable/hole"/>

            <ImageView
                android:layout_width="105dp"
                android:layout_height="49dp"
                android:layout_weight="1"
                android:id="@+id/holeImage6"
                android:src="@drawable/hole"/>
        </LinearLayout>

    </RelativeLayout>

    <!--Row 3-->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:id="@+id/row3"
        android:background="@drawable/plain_grass_3"
        android:orientation="horizontal"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:weightSum="3"
            >

            <ImageView
                android:layout_width="105dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:onClick="onClick"
                android:adjustViewBounds="true"
                android:id="@+id/imageMole7"
                android:src="@drawable/gopher"
                android:layout_gravity="bottom"/>
            <ImageView
                android:layout_width="105dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:onClick="onClick"
                android:adjustViewBounds="true"
                android:id="@+id/imageMole8"
                android:src="@drawable/gopher"
                android:layout_gravity="bottom"/>
            <ImageView
                android:layout_width="105dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:onClick="onClick"
                android:adjustViewBounds="true"
                android:id="@+id/imageMole9"
                android:src="@drawable/gopher"
                android:layout_gravity="bottom"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="2"
            android:orientation="vertical"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                >
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/plain_grass_3"
                android:layout_weight="1"
                >
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:weightSum="3"
            android:background="@drawable/plain_grass_3"
            android:gravity="bottom">

            <ImageView
                android:layout_width="105dp"
                android:layout_height="49dp"
                android:layout_weight="1"
                android:id="@+id/holeImage7"
                android:src="@drawable/hole"
                android:layout_gravity="center_vertical"/>

            <ImageView
                android:layout_width="105dp"
                android:layout_height="49dp"
                android:layout_weight="1"
                android:id="@+id/holeImage8"
                android:src="@drawable/hole"
                android:layout_gravity="center_vertical"/>

            <ImageView
                android:layout_width="105dp"
                android:layout_height="49dp"
                android:layout_weight="1"
                android:id="@+id/holeImage9"
                android:src="@drawable/hole"
                android:layout_gravity="center_vertical"/>
        </LinearLayout>



    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.25"
        android:id="@+id/row4"
        android:orientation="horizontal"
        android:background="@drawable/plain_grass_3">


    </RelativeLayout>

</LinearLayout>


</RelativeLayout>
